Fix bug with GitHub image and Title bar image not showing while in index.html

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ ul {
 
 li {
     text-align: center;
-    width: 8%;
+    width: auto;
     font-weight: 400;
     padding: 0.5em;
     border-radius: 1em;
